[package]
name = "rzn_cluster"
version = "0.1.0"
edition = "2021"
description = "A library for dimensionality reduction and clustering"
authors = ["Sarav"]
license = "MIT"
repository = "https://github.com/sarav/rzn_cluster"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core clustering dependencies
clustering = "0.2.1"
petal-clustering = "0.8.0"
petal-neighbors = "0.10.0"
linfa = "0.7.0"
linfa-clustering = "0.7.0"
linfa-kernel = "0.7.0"
approx = "0.5.1"

# UMAP and dimensionality reduction
annembed = "0.1.3"
hnsw_rs = "0.3.0"
ndarray = { version = "0.15", features = ["rayon", "serde"] }
ndarray-linalg = { version = "0.16", default-features = false }

# Utilities
anyhow = "1.0.86"
rand = { version = "0.8" }
rand_distr = "0.4"
rand_xoshiro = "0.6.0"
serde = { version = "1.0", features = ["derive"] }

# For macos
blas-src = { version = "0.8", optional = true, features = ["accelerate"] }

[dev-dependencies]
# For examples
plotters = "0.3.5"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
lancedb = "0.5.2"
arrow = "51.0"
arrow-array = "51.0"
arrow-data = "51.0"
arrow-schema = "51.0"
knn_classifier = "0.1.2"

[features]
default = []
macos-accelerate = ["blas-src", "ndarray/blas"]

[[example]]
name = "hdbscan_demo"
path = "examples/hdbscan_demo.rs"

[[example]]
name = "umap_demo"
path = "examples/umap_demo.rs"

[[example]]
name = "lancedb_demo"
path = "examples/lancedb_demo.rs"

[[example]]
name = "gmm_demo"
path = "examples/gmm_demo.rs"

[[example]]
name = "kmeans_demo"
path = "examples/kmeans_demo.rs"
